openshift/ACM/ocpvirt/satellite/sat-server.yaml
kind: Service
apiVersion: v1
metadata:
  name: satellite
  namespace: openshift-vms
spec:
  ports:
    - name: ssh
      protocol: TCP
      port: 22
      targetPort: 22
    - name: dnstcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: dnsudp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: katello
      protocol: TCP
      port: 5646
      targetPort: 5646
    - name: puppet
      protocol: TCP
      port: 8140
      targetPort: 8140
    - name: hostregistration
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: api
      protocol: TCP
      port: 9090
      targetPort: 9090
  selector:
    kubevirt.io/domain: satellite

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: satellite
  namespace: openshift-vms
  labels:
    app.kubernetes.io/instance: satellite
spec:
  host: satellite.apps.ocp.drkspace.fr
  to:
    kind: Service
    name: satellite
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
  wildcardPolicy: None
